force-app/main/default/objects/RegleFusion__mdt/RegleFusion__mdt.object-meta.xml
<CustomObject>
    <description>Règles de fusion pour la fonctionnalité de dédoublonnage des comptes et chantier</description>
    <label>Règle de fusion</label>
    <pluralLabel>Règles de fusion</pluralLabel>
</CustomObject>