force-app/main/default/objects/RegleFusion__mdt/fields/champ__c.field-meta.xml
<CustomField>
    <fullName>champ__c</fullName>
    <label>Champ</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>