force-app/main/default/objects/RegleFusion__mdt/fields/champDependant__c.field-meta.xml
<CustomField>
    <fullName>champDependant__c</fullName>
    <label>Champ dépendant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>