force-app/main/default/objects/RegleFusion__mdt/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <label>Objet</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compte B2B</fullName>
                <default>true</default>
                <label>Compte B2B</label>
            </value>
            <value>
                <fullName>Compte B2C</fullName>
            </value>
            <value>
                <fullName>Chantier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>