force-app/main/default/objects/RegleFusion__mdt/fields/profile__c.field-meta.xml
<CustomField>
    <fullName>profile__c</fullName>
    <label>Profils autorisés</label>
    <length>255</length>
    <type>Text</type>
</CustomField>