force-app/main/default/objects/RegleFusion__mdt/fields/regleAuto__c.field-meta.xml
<CustomField>
    <fullName>regleAuto__c</fullName>
    <label>Règle de fusion automatique</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
                <default>true</default>
                <label>Minimum</label>
            </value>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Somme</fullName>
            </value>
            <value>
                <fullName>Et</fullName>
            </value>
            <value>
                <fullName>Ou</fullName>
            </value>
            <value>
                <fullName>Premier créé</fullName>
            </value>
            <value>
                <fullName>Dernier créé</fullName>
            </value>
            <value>
                <fullName>Premier modifié</fullName>
            </value>
            <value>
                <fullName>Dernier modifié</fullName>
            </value>
            <value>
                <fullName>Vide</fullName>
            </value>
            <value>
                <fullName>Dépendance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>