force-app/main/default/objects/RegleFusion__mdt/fields/regleManuelle__c.field-meta.xml
<CustomField>
    <fullName>regleManuelle__c</fullName>
    <label>Règle de fusion manuelle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sélection</fullName>
                <default>true</default>
                <label>Sélection</label>
            </value>
            <value>
                <fullName>Libre</fullName>
            </value>
            <value>
                <fullName>Sélection ou libre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>