force-app/main/default/objects/RegleFusion__mdt/listViews/B2C_Manuel.listView-meta.xml
<ListView>
    <fullName>B2C_Manuel</fullName>
    <columns>MasterLabel</columns>
    <columns>champ__c</columns>
    <columns>regleAuto__c</columns>
    <columns>regleManuelle__c</columns>
    <columns>champDependant__c</columns>
    <columns>profile__c</columns>
    <columns>object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>object__c</field>
        <operation>equals</operation>
        <value>Compte B2C</value>
    </filters>
    <filters>
        <field>regleManuelle__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Champs B2C Manuel</label>
    <language>fr</language>
</ListView>