force-app/main/default/objects/RegleFusion__mdt/listViews/CHA.listView-meta.xml
<ListView>
    <fullName>CHA</fullName>
    <columns>MasterLabel</columns>
    <columns>champ__c</columns>
    <columns>regleAuto__c</columns>
    <columns>regleManuelle__c</columns>
    <columns>champDependant__c</columns>
    <columns>profile__c</columns>
    <columns>object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>object__c</field>
        <operation>equals</operation>
        <value>Chantier</value>
    </filters>
    <label>Champs Chantier</label>
    <language>fr</language>
</ListView>